# Mathematics-for-Robotics

./: CMakeLists.txt  README.md
Interpolation/: InterpolatePoly.cpp  README.md
Kinematics/: FK_6DoF.ipynb  IK.ipynb  VK.ipynb
LinearAlgebra/: CholeskyDecomposition.cpp  LUDecomposition.cpp  MatrixRank.cpp  QRDecomposition.cpp  README.md
